--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,5 @@
 {
   "name": "backbone-boilerplate",
-
   "dependencies": {
     "html5-boilerplate": "~4.3.0",
     "almond": "~0.2.9",
@@ -13,9 +12,8 @@
     "mocha": "~1.17.1",
     "chai": "~1.9.0",
     "sinon": "~1.8.2",
-    "text":"*",
-    "mustache":"*",
-    "less":"*",
-    "bootstrap":"*"
+    "text": "*",
+    "mustache": "*",
+    "pure": "~0.5.0"
   }
 }
